[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Menus/MainMenu02.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/Title screen_Real.png" type="Texture" id=2]
[ext_resource path="res://_common/Themes/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://DesignNotes.gd" type="Script" id=4]
[ext_resource path="res://Accreditation.gd" type="Script" id=5]
[ext_resource path="res://scenes/Menus/GarageDoorsTransition.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Menus/SplashImage.tscn" type="PackedScene" id=7]
[ext_resource path="res://sfx/Main_Menu theme.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/Menus/StageManager.gd" type="Script" id=9]

[node name="StageManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 9 )

[node name="SceneContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MainMenu" parent="SceneContainer" instance=ExtResource( 1 )]
texture = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SceneContainer"]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[node name="DesignNotes" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Accreditation" type="Node" parent="."]
script = ExtResource( 5 )

[node name="GarageDoorsTransition" parent="." instance=ExtResource( 6 )]
mouse_filter = 2

[node name="SplashImage" parent="." instance=ExtResource( 7 )]
visible = false
